- Improved text wrapping - Fixed time and .tag font-size in articles - .heading-link now appears on tap - Added aria-label to .heading-link - Removed https:// from the text of all links

--- a/assets/sass/components/_post-preview.scss
+++ b/assets/sass/components/_post-preview.scss
@@ -1,11 +1,10 @@
 .post-summary {
-  overflow: hidden;
   max-width: 100%;
-  text-overflow: clip;
-  word-break: normal;
-  overflow-wrap: anywhere;
   margin: 0.5em 0;
+  overflow-wrap: anywhere;
+  word-break: normal;
   hyphens: auto;
+  text-wrap: balance;
 }
 
 .post-summary,
