--- a/assets/sass/layout/_card.scss
+++ b/assets/sass/layout/_card.scss
@@ -1,15 +1,17 @@
 .card {
   width: 100%;
-  background-color: var(--color-content-bg); // Update in baseof.html (background-color)
-  padding: 24px 20px;  // Update in baseof.html
-  margin: 8px 0;  // Update in baseof.html
-  overflow: hidden;
-  word-break: normal;
-  overflow-wrap: anywhere;
+  margin: 8px 0;
+  padding: 24px 20px;
+  background-color: var(--color-content-bg);
   border-radius: 16px;
-  flex-grow: 1;
+
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+
+  overflow: hidden;
+  overflow-wrap: anywhere;
+
   transition: background-color var(--ease);
 
   a {
